hphp/hack/test/typecheck/array_assign_undefined_var.php.exp
File "array_assign_undefined_var.php", line 5, characters 3-16:
Variable $undefined_var is undefined, or there exists at least one control flow path reaching this point which does not define $undefined_var. (Naming[2050])
