hphp/hack/test/typecheck/array_assign_undefined_var.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function foo(): void {
  $undefined_var['x'] = 0;
}
